k8s/etests-django/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etests-django-service
spec:
  selector:
    app: etests-django
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
